v2/bases/system/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pub-lb
  namespace: istio-namespace1
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.byeon.ca"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.byeon.ca"
    tls:
      mode: SIMPLE
      credentialName: byeon-ca-tls
